data/derived/sp14/progs/unify/prog1240.ml.out
Characters 146-152:
  | hd::tl -> List.append (x,hd) (argmaker x tl)
                          ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
